--- a/theHutries.cbp
+++ b/theHutries.cbp
@@ -58,6 +58,8 @@
 		<Unit filename="barracks.h" />
 		<Unit filename="building.cpp" />
 		<Unit filename="building.h" />
+		<Unit filename="carrier.cpp" />
+		<Unit filename="carrier.h" />
 		<Unit filename="environment.cpp" />
 		<Unit filename="environment.h" />
 		<Unit filename="game.cpp" />
@@ -81,10 +83,14 @@
 		<Unit filename="residence.h" />
 		<Unit filename="sawmill.cpp" />
 		<Unit filename="sawmill.h" />
+		<Unit filename="soldier.cpp" />
+		<Unit filename="soldier.h" />
 		<Unit filename="stonecutter.cpp" />
 		<Unit filename="stonecutter.h" />
 		<Unit filename="unit.cpp" />
 		<Unit filename="unit.h" />
+		<Unit filename="worker.cpp" />
+		<Unit filename="worker.h" />
 		<Unit filename="world.cpp" />
 		<Unit filename="world.h" />
 		<Extensions>
