--- a/Launcher Source/Launcher/Launcher.csproj
+++ b/Launcher Source/Launcher/Launcher.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>big_tH.ico</ApplicationIcon>
+    <ApplicationIcon>iconblack.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -106,6 +106,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="big_tH.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="iconblack.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="iconblack.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
