--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@ CMakeLists.txt
 *.cbp
 *.depend
 *.layout
+Launcher.exe
 
 /theHutries.cbp
 /theHutries.depend
 /theHutries.layout
 /bin
 /obj
+/config
